SERVER-43069: Condition logging for slow ops on sample rate

create mode 100644 src/mongo/util/log_with_sampling.h
 create mode 100644 src/mongo/util/log_with_sampling_test.cpp