jstests/replsets/log_secondary_oplog_application.js
@@ -9,6 +9,9 @@
 (function() {
 "use strict";
 
+load("jstests/replsets/rslib.js");
+load("jstests/libs/fail_point_util.js");
+
 let name = "log_secondary_oplog_application";
 let rst = ReplSetTest({name: name, nodes: 2});
 rst.startSet();
@@ -44,7 +47,7 @@ assert.throws(function() {
 });
 
 /**
- * Part 2: Issue a slow op and make sure that we *do* log it.
+ * Part 2: Issue a slow op and make sure that we *do* log it when the sample rate is set to 1.
  * We use a failpoint in applyOplogEntryOrGroupedInserts which blocks after we read the time at the
  * start of the application of the op, and we wait there to simulate slowness.
  */
@@ -53,29 +56,83 @@ assert.throws(function() {
 assert.commandWorked(primary.getDB(name).createCollection("slowOp"));
 rst.awaitReplication();
 
-// Set "slowMS" to a low value (in milliseconds).
-assert.commandWorked(secondary.getDB(name).setProfilingLevel(1, 20));
+// Set "sampleRate" to 1 and "slowMS" to a low value (in milliseconds).
+assert.commandWorked(secondary.getDB(name).setProfilingLevel(1, {sampleRate: 1, slowms: 20}));
 
 // Hang right after taking note of the start time of the application.
-assert.commandWorked(secondary.adminCommand(
-    {configureFailPoint: "hangAfterRecordingOpApplicationStartTime", mode: "alwaysOn"}));
+let hangAfterRecordingOpApplicationsStartTimeFailPoint =
+    configureFailPoint(secondary, "hangAfterRecordingOpApplicationStartTime");
 
 // Issue a write and make sure we've hit the failpoint before moving on.
 assert.commandWorked(primary.getDB(name)["slowOp"].insert({"slow": "sloth"}));
-checkLog.contains(
-    secondary,
-    "applyOplogEntryOrGroupedInserts - fail point hangAfterRecordingOpApplicationStartTime enabled");
+hangAfterRecordingOpApplicationsStartTimeFailPoint.wait();
 
 // Wait for an amount of time safely above the "slowMS" we set.
 sleep(0.5 * 1000);
 
-// Disable the failpoint so the op finish can applying.
-assert.commandWorked(secondary.adminCommand(
-    {configureFailPoint: "hangAfterRecordingOpApplicationStartTime", mode: "off"}));
+// Disable the hangAfterRecordingOpApplicationsStartTime failpoint so the op finish can applying.
+hangAfterRecordingOpApplicationsStartTimeFailPoint.off();
 
 // Make sure we log that insert op.
 rst.awaitReplication();
 checkLog.contains(secondary, "sloth");
+
+/**
+ * Part 3: Issue a slow op and make sure that we do *not* log it when the sample rate is set to 0.
+ */
+
+// Set "sampleRate" to 0 and "slowMS" to a low value (in milliseconds).
+assert.commandWorked(secondary.getDB(name).setProfilingLevel(1, {sampleRate: 0, slowms: 20}));
+
+// Hang right after taking note of the start time of the application.
+hangAfterRecordingOpApplicationsStartTimeFailPoint =
+    configureFailPoint(secondary, "hangAfterRecordingOpApplicationStartTime");
+
+// Issue a write and make sure we've hit the failpoint before moving on.
+assert.commandWorked(primary.getDB(name)["slowOp"].insert({"slow": "turtle"}));
+hangAfterRecordingOpApplicationsStartTimeFailPoint.wait();
+
+// Wait for an amount of time safely above the "slowMS" we set.
+sleep(0.5 * 1000);
+
+// Disable the hangAfterRecordingOpApplicationsStartTime failpoint so the op finish can applying.
+hangAfterRecordingOpApplicationsStartTimeFailPoint.off();
+
+// Ensure that the write was replicated.
+rst.awaitReplication();
+
+// The op should not have been logged.
+assert.throws(function() {
+    checkLog.contains(secondary, "turtle", 1 * 1000);
+});
+
+/**
+ * Part 4: Issue a slow op and verify that we log it when the sample rate is 0 but log verbosity
+ * is set to 1.
+ */
+
+// Set the log verbosity for the replication component to 1.
+setLogVerbosity(rst.nodes, {"replication": {"verbosity": 1}});
+
+// Hang right after taking note of the start time of the application.
+hangAfterRecordingOpApplicationsStartTimeFailPoint =
+    configureFailPoint(secondary, "hangAfterRecordingOpApplicationStartTime");
+
+// Issue a write and make sure we've hit the failpoint before moving on.
+assert.commandWorked(primary.getDB(name)["slowOp"].insert({"slow": "snail"}));
+hangAfterRecordingOpApplicationsStartTimeFailPoint.wait();
+
+// Wait for an amount of time safely above the "slowMS" we set.
+sleep(0.5 * 1000);
+
+// Disable the hangAfterRecordingOpApplicationsStartTime failpoint so the op finish can applying.
+hangAfterRecordingOpApplicationsStartTimeFailPoint.off();
+
+// Ensure that the write was replicated.
+rst.awaitReplication();
+
+// Make sure we log that insert op.
+checkLog.contains(secondary, "snail");
 
 rst.stopSet();
 })();
